--- a/pom.xml
+++ b/pom.xml
@@ -74,5 +74,11 @@
       <artifactId>pagehelper-spring-boot-starter</artifactId>
       <version>1.4.1</version>
     </dependency>
+
+    <!--Redis 依赖-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-redis</artifactId>
+    </dependency>
   </dependencies>
 </project>
