--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,16 @@
     </dependency>
 
     <!--mybatis 依赖-->
+<!--    <dependency>-->
+<!--      <groupId>org.mybatis.spring.boot</groupId>-->
+<!--      <artifactId>mybatis-spring-boot-starter</artifactId>-->
+<!--      <version>3.0.0</version>-->
+<!--    </dependency>-->
+
     <dependency>
-      <groupId>org.mybatis.spring.boot</groupId>
-      <artifactId>mybatis-spring-boot-starter</artifactId>
-      <version>3.0.0</version>
+      <groupId>com.baomidou</groupId>
+      <artifactId>mybatis-plus-boot-starter</artifactId>
+      <version>3.5.3.1</version>
     </dependency>
 
     <!--mysql 依赖-->
