--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,19 +17,18 @@ spring:
 #    map-underscore-to-camel-case: true  #开启驼峰命名和下划线命名的自动转换
 
 mybatis-plus:
-#  config-location: classpath:mybatis-config.xml #mybatis 的配置文件路径,目前也用不到
-#  mapper-locations: classpath:mapper/*Mapper.xml   #省略mapper文件的@Mapper注释
-  type-aliases-package: pojo   #批量注册指定包下的类，在mapper.xml 中就不需要类的全类名
+#  type-aliases-package: pojo   #批量注册指定包下的类，在mapper.xml 中就不需要类的全类名
   configuration:
     map-underscore-to-camel-case: true  #开启驼峰命名
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl  # 开启dubug模式
+#  mapper-locations: classpath:mapper/*Mapper.xml   #省略mapper文件的@Mapper注释
+#  config-location: classpath:mybatis-config.xml #mybatis 的配置文件路径,目前也用不到
   global-config:
     db-config:
       # 逻辑删除的配置
       logic-delete-field: flag
       logic-delete-value: 1
       logic-not-delete-value: 0
-
 #  #以下是数据库策略，目前用不到
 #  global-config:
 #    #数据库配置
